Reroute root to pins#index

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-	<h1>You're logged in</h1>
+	Bienvenue sur Whojam
 <% else %>
 	<div class="hero-unit">
 		<h1>Welcome to Whojam !</h1>
