Changing mansory versionfrom V3 to V2

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -15,9 +15,9 @@ body {
 
 .footer {
 	margin-top: 50px;
-	color: $black;
-	a 
-		{color: $gray;
+	color: $grayLight;
+	a {
+			color: $gray;
 		}
 }
 
